@@ -1,1 +1,1 @@
-DIST RimWorldAlpha3fLinux.zip 65404151 SHA256 1a5c288e6ac095c42133a9eddf77d286ed5286e879b29ae9acc5333cfed94098 SHA512 fabd582fa9833e4c5cb55071b20bd918209a8703db10eca0e452d3c81fd2e3000ed7dc6bae0cf6b44635dd52ba241a9b6e2ab0d2a34153c6a8280d388940b5b4 WHIRLPOOL 9566aa6ab625e127dbcee0536f3c696401dc3d7dd587913ef735483418d40a5b15faa18d4476e7ab1b7a33a4dc34a127ed958a7ec7afb7e2ba9b8cfd1455c0b7
+DIST RimWorldAlpha4fLinux.zip 69867901 SHA256 c574d4c6c48e1e1d77da18f10114a8c6226c5db3768fd623484e15deeaaa2c23 SHA512 2817106f7f96174ca57b6c2b6646801921e4e33f10fa22e21532787d4344ea105b15d3e3da24aabdf1c04b076b44e9a1782d0dbaa8b3c80a61953703a4712dfc WHIRLPOOL 8224cb9e3e9ef154a25a65ba79c7e79fb20c8d36187ad4e294f91e222382fd6f5f8bfec37eab8496da9227c097e45042f3399d1978571c0c02add25f0af91acb
